# cobot

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SOUL.md.example  cobot.yml.example  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  plugin_request.yml
.github/workflows/: ci.yml  e2e.yml  pages.yml  release.yml
cobot/: __init__.py  agent.py  cli.py
cobot/plugins/: README.md  __init__.py  base.py  interfaces.py  registry.py
cobot/plugins/communication/: README.md  __init__.py  plugin.py
cobot/plugins/communication/tests/: __init__.py  test_plugin.py
cobot/plugins/compaction/: README.md  plugin.py
cobot/plugins/config/: README.md  __init__.py  plugin.py
cobot/plugins/config/tests/: __init__.py  test_plugin.py
cobot/plugins/context/: README.md  __init__.py  plugin.py
cobot/plugins/context/tests/: __init__.py  test_plugin.py
cobot/plugins/filedrop/: README.md  __init__.py  plugin.py
cobot/plugins/logger/: README.md  plugin.py
cobot/plugins/lurker/: __init__.py  plugin.py
cobot/plugins/lurker/tests/: test_plugin.py
cobot/plugins/memory/: README.md  __init__.py  plugin.py
cobot/plugins/memory/tests/: __init__.py  test_plugin.py
cobot/plugins/memory_files/: README.md  __init__.py  plugin.py
cobot/plugins/memory_files/tests/: __init__.py  test_plugin.py
cobot/plugins/nostr/: README.md  plugin.py
cobot/plugins/nostr/tests/: __init__.py  test_plugin.py
cobot/plugins/ollama/: README.md  plugin.py
cobot/plugins/pairing/: README.md  __init__.py  plugin.py  storage.py
cobot/plugins/pairing/tests/: __init__.py  test_plugin.py
cobot/plugins/persistence/: README.md  plugin.py
cobot/plugins/ppq/: README.md  plugin.py
cobot/plugins/ppq/tests/: __init__.py  test_plugin.py
cobot/plugins/security/: README.md  plugin.py
cobot/plugins/session/: README.md  __init__.py  plugin.py
cobot/plugins/session/tests/: __init__.py  test_plugin.py
cobot/plugins/soul/: README.md  __init__.py  plugin.py
cobot/plugins/soul/tests/: __init__.py  test_plugin.py
cobot/plugins/telegram/: README.md  __init__.py  plugin.py
cobot/plugins/telegram/tests/: test_plugin.py
cobot/plugins/tools/: README.md  plugin.py
cobot/plugins/tools/tests/: __init__.py  test_plugin.py
cobot/plugins/wallet/: README.md  plugin.py
cobot/plugins/workspace/: README.md  __init__.py  plugin.py
cobot/plugins/workspace/tests/: __init__.py  test_plugin.py
docs/: RELEASE-PLAN.md  architecture.md  for-agents.md  quickstart.md
docs/architecture/: session-plugin.md
site/: index.html
tests/: test_cli.py  test_cli_plugins.py  test_cobot.py  test_config.py  test_llm.py  test_nostr.py  test_plugins.py  test_tools.py  test_wallet.py  test_workspace.py
tests/e2e/: test_e2e.sh
